--- a/config
+++ b/config
@@ -14,6 +14,18 @@
 
 set $_terminal	i3-sensible-terminal
 
+# Workspace names
+set $_workspace_1	Workspace1
+set $_workspace_2	Workspace2
+set $_workspace_3	Workspace3
+set $_workspace_4	Workspace4
+set $_workspace_5	Workspace5
+set $_workspace_6	Workspace6
+set $_workspace_7	Workspace7
+set $_workspace_8	Workspace8
+set $_workspace_9	Workspace9
+set $_workspace_10	Workspace10
+
 ### END Custom variables ###
 
 set $mod Mod4
@@ -100,28 +112,28 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace $_workspace_1
+bindsym $mod+2 workspace $_workspace_2
+bindsym $mod+3 workspace $_workspace_3
+bindsym $mod+4 workspace $_workspace_4
+bindsym $mod+5 workspace $_workspace_5
+bindsym $mod+6 workspace $_workspace_6
+bindsym $mod+7 workspace $_workspace_7
+bindsym $mod+8 workspace $_workspace_8
+bindsym $mod+9 workspace $_workspace_9
+bindsym $mod+0 workspace $_workspace_10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace $_workspace_1
+bindsym $mod+Shift+2 move container to workspace $_workspace_2
+bindsym $mod+Shift+3 move container to workspace $_workspace_3
+bindsym $mod+Shift+4 move container to workspace $_workspace_4
+bindsym $mod+Shift+5 move container to workspace $_workspace_5
+bindsym $mod+Shift+6 move container to workspace $_workspace_6
+bindsym $mod+Shift+7 move container to workspace $_workspace_7
+bindsym $mod+Shift+8 move container to workspace $_workspace_8
+bindsym $mod+Shift+9 move container to workspace $_workspace_9
+bindsym $mod+Shift+0 move container to workspace $_workspace_10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
